# gyst

./: .gitignore  COMMANDS.md  Cargo.toml  LICENSE  NEW_FEATURES.md  README.md  RELEASING.md  install.sh  test.txt  test_feature.rs
.github/: FUNDING.yml
.github/workflows/: release.yml
server/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
server/src/: anthropic.rs  error.rs  main.rs
src/: main.rs
src/ai/: mod.rs
src/branch/: mod.rs
src/cli/: mod.rs
src/command_suggest/: mod.rs
src/config/: mod.rs
src/git/: mod.rs
src/server/: mod.rs
src/utils/: mod.rs
