[package]
name = "gyst"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
colored = "3.0.0"
dotenv = "0.15.0"
git2 = "0.20.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
mockall = "0.13.1"
pretty_assertions = "1.4.1"
