[package]
name = "gyst"
version = "0.1.0"
edition = "2024"
authors = ["Varun V <varunv@example.com>"]
description = "A Git commit message generator powered by AI"
repository = "https://github.com/created-by-varun/gyst"
license = "MIT"
readme = "README.md"
keywords = ["git", "commit", "ai", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
colored = "3.0.0"
dirs = "5.0.1"
dialoguer = "0.11.0"
dotenv = "0.15.0"
git2 = "0.20.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
spinners = "4.1.1"
console = "0.15.8"
tempfile = "3.10.1"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.10"

[dev-dependencies]
mockall = "0.13.1"
pretty_assertions = "1.4.1"
