[package]
name = "gyst-server"
version = "0.1.0"
edition = "2024"
authors = ["Varun V <varunv@example.com>"]
description = "Server component for Gyst AI-powered Git assistant"

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
env_logger = "0.11.3"
log = "0.4.21"
dotenv = "0.15.0"
anyhow = "1.0.96"
thiserror = "1.0.58"
config = "0.14.0"
chrono = "0.4.34"
